# WebScroller-ResearchBased

./: .dockerignore  .env.backup  .env.example  .gitignore  .gitlab-ci.yml  CI_CD_COMPARISON.md  DEVELOPMENT_STATUS.md  Dockerfile  GITHUB_SETUP.md  README.md  READY_TO_PUSH.md  __init__.py  azure-pipelines.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.py
docs/: README.md
scripts/: README.md  generate_secrets.py  run_tests.py
src/: __init__.py  main.py
src/ai/content/: __init__.py
src/ai/reasoning/: __init__.py
src/auth/: __init__.py
src/auth/mfa/: __init__.py
src/core/: config.py  exceptions.py  logging.py
src/crawler/: __init__.py
src/crawler/handlers/: __init__.py
src/security/: __init__.py
tests/: conftest.py
tests/integration/: test_system_integration.py
tests/unit/: test_config.py  test_exceptions.py  test_logging.py
